# vmm-sys-util

./: .gitignore  .gitmodules  .platform  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  coverage_config.json  coverage_config_x86_64.json
.buildkite/: pipeline.windows.yml  pipeline.yml
src/: align.rs  errno.rs  eventfd.rs  fallocate.rs  fam.rs  file_traits.rs  ioctl.rs  lib.rs  metric.rs  poll.rs  rand.rs  seek_hole.rs  signal.rs  sock_ctrl_msg.rs  struct_util.rs  syscall.rs  syslog.rs  tempdir.rs  tempfile.rs  terminal.rs  timerfd.rs  write_zeroes.rs
src/illumos/: epoll.rs  mod.rs  seek_hole.rs  signal.rs  write_zeroes.rs
src/linux/: aio.rs  epoll.rs  eventfd.rs  fallocate.rs  ioctl.rs  mod.rs  poll.rs  seek_hole.rs  signal.rs  sock_ctrl_msg.rs  timerfd.rs  write_zeroes.rs
src/unix/: aio.rs  epoll.rs  event.rs  file_traits.rs  mod.rs  pipefd.rs  poll.rs  signal.rs  sock_ctrl_msg.rs  tempdir.rs  terminal.rs
