[package]
name = "vmm-sys-util"
version = "0.9.0"
authors = ["Intel Virtualization Team <vmm-maintainers@intel.com>"]
description = "A system utility set"
repository = "https://github.com/rust-vmm/vmm-sys-util"
readme = "README.md"
keywords = ["utils"]
edition = "2018"
license = "Apache-2.0 AND BSD-3-Clause"

[features]
with-serde = ["serde", "serde_derive"]

[dependencies]
libc = ">=0.2.39"
serde = { version = ">=1.0.27", optional = true }
serde_derive = { version = ">=1.0.27", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
bitflags = "1.0"

[dev-dependencies]
serde_json = ">=1.0.9"
