[package]
name = "vmm-sys-util"
version = "0.12.1"
authors = ["Intel Virtualization Team <vmm-maintainers@intel.com>"]
description = "A system utility set"
repository = "https://github.com/rust-vmm/vmm-sys-util"
readme = "README.md"
keywords = ["utils"]
edition = "2021"
license = "BSD-3-Clause"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
with-serde = ["serde", "serde_derive"]

[dependencies]
libc = "0.2.39"
serde = { version = "1.0.27", optional = true }
serde_derive = { version = "1.0.27", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
bitflags = "1.0"

[dev-dependencies]
serde_json = "1.0.9"
bincode = "1.3.3"
